# gh-actions-test

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  release.config.js
.github/workflows/: Linting.yml  destroy_ci.yml  javascript-CI.yml  javascript_ci.yml  main.yml  python_CI.yml  python_ci.yml  release.yml  zip-file.yml  zip_ci.yml
aks/: README.md  aks-cluster.tf
javascript/: index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
javascript/github/workflows/: javascript_ci.yaml
javascript/tests/: index.test.ts
python/: .terraform.lock.hcl  Dockerfile  README.md  docker-compose.yml  main.py  main.tf  pyproject.toml  requirements.txt  variables.tf
python/github workflow/: python_ci.yaml
python/tests/: test_main.py
