[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.0",
    "redis>=6.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
